@@ -94,6 +94,7 @@
     <Compile Include="Card\DrawGraphic.cs" />
     <Compile Include="Card\DrawTextGraphics.cs" />
     <Compile Include="Card\DrawTextTextRenderer.cs" />
+    <Compile Include="Card\Export\ExportUtil.cs" />
     <Compile Include="Card\Export\FileCardClipboardExporter.cs" />
     <Compile Include="Card\Export\FileCardSingleExporter.cs" />
     <Compile Include="Card\Export\FileCardExporterFactory.cs" />
